# CYD_ESP32_LVGL_EEZ

./: CMakeLists.txt  README.md  buildnumber.cmake  buildnumber.mk  sdkconfig
components/eez-framework/: CMakeLists.txt
components/eez-framework/src/eez/libs/: utf8.h
components/lvgl_esp32_drivers/: CMakeLists.txt  lvgl_helpers.c
components/lvgl_esp32_drivers/lvgl_tft/: esp_lcd_backlight.c  ili9341.c  ili9488.c  ili9488.h  st7789.h
components/lvgl_esp32_drivers/lvgl_touch/: ft6x36.c  ft6x36.h  gt911.c  gt911.h  l58.cpp  l58.h  touch_driver.c  xpt2046.c
main/: CMakeLists.txt  ESP32_LVGL-EEZ-Demo.eez-project  Kconfig  app_BB3.cpp  app_gui.cpp  app_main.cpp
main/include/: lv_conf.h
main/ui/: eez-flow.h  screens.c  ui.h
